updates to make it a little easier to test and see results

--- a/get/page.html
+++ b/get/page.html
@@ -7,10 +7,12 @@
   </head>
 
   <body>
-    <p>
-      If you got this page, and it is styled correctly, you're good.
-      <a href="/">Return to continue testing</a>
-    </p>
-    <img src="/images/sushi.jpg" alt="Sushi" />
+    <section>
+      <p>
+        If you got this page, and it is styled correctly, you're good.
+        <a href="/index.html">Return to continue testing</a>
+      </p>
+      <img src="/images/sushi.jpg" alt="Sushi" />
+    </section>
   </body>
 </html>
