corrected delete test link

--- a/index.html
+++ b/index.html
@@ -93,9 +93,7 @@
           <div id="delete-request-result"></div>
         </li>
         <li>
-          <a href="/delete/delete-test.html"
-            >Check that page was deleted (404)</a
-          >
+          <a href="/delete/delete-me.html">Check that page was deleted (404)</a>
         </li>
       </ol>
     </section>
